--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,10 +1,8 @@
-    <h1>Welcome to World Sports News</h1>
-    <p>
-      You have successfully signed up to World Sports News,
-      your email is:<br>
-    </p>
-    <p>
-      To login to the site, just follow this link
-    </p>
-    <p>Thanks for joining and have a great day!</p>
-
+<h1>Welcome to My Awesome Site, <%= @user.email %>!</h1>
+<p>
+  We are excited to have you on board. Get ready to explore and enjoy all the awesome features we have to offer!
+</p>
+<p>
+  Cheers,<br/>
+  The Awesome Site Team
+</p>
